--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pydantree"
 version = "0.1.2"
 description = "Treesitter, but with more Pydantic."
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.13"
 authors = [
   { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" }
 ]
@@ -15,6 +15,8 @@ license = { file = "LICENSE" }
 keywords = ["tree-sitter", "pydantic", "parser", "ast"]
 
 dependencies = [
+  "confidantic",
+  "graph-sitter",
   "pydantic>=2.11",
   "tree-sitter>=0.23", # official Python bindings
   "tree-sitter-python>=0.23.6",
@@ -40,6 +42,10 @@ python = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/pydantree", "examples", "data"]
+
+[tool.uv.sources]
+confidantic = { git = "https://github.com/Bullish-Design/confidantic.git" }
+graph-sitter = { git = "https://github.com/Bullish-Design/graph-sitter-env.git" }
 
 [project.scripts]
 pydantree = "pydantree.cli:main"
