Revert "MVP version - switching to just using Graphsitter"
This reverts commit a5beecc85f5afc08ed98cf5e76f78ac1342f371c.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 __pycache__/
 *.py[cod]
 *$py.class
-.tmuxp.yaml
 
 # C extensions
 *.so
@@ -192,12 +191,4 @@ cython_debug/
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
-.cursorindexingignore# Devenv
-.devenv*
-devenv.local.nix
-
-# direnv
-.direnv
-
-# pre-commit
-.pre-commit-config.yaml
+.cursorindexingignore
