--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ keywords = ["tree-sitter", "pydantic", "parser", "ast"]
 
 dependencies = [
   "pydantic>=2.11",
+  "rustworkx>=0.16.0",
   "tree-sitter>=0.23", # official Python bindings
   "tree-sitter-python>=0.23.6",
 ]
