--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "rustworkx>=0.16.0",
   "tree-sitter>=0.23", # official Python bindings
   "tree-sitter-python>=0.23.6",
+  "typer>=0.16.0",
 ]
 
 [project.optional-dependencies]
